[package]
name = "simple-file-download-server"
version = "0.2.0"
edition = "2021"
description = "minimap2 frontend"
license = "MIT"
repository ="https://github.com/keithyin/file-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.35.1", features=["full"]}
tokio-util = {version="0.7.10", features=["full"]}
axum = "0.7.3"
clap = "4.4.14"
